# vega

./: .gitignore  2026-02-17_save_token.md  2026-02-18_manual_snapshot.md  2026-02-18_selection_ungrouped.md  Cargo.toml  GEMINI.md  README.md  README_KR.md  ROADMAP.md  ROADMAP_KR.md  RULES.md  architecture.md  auth_manager.rs  config.rs  db.rs  env.rs  env_scanner.rs  gemini.rs  init_env.sh  keyring.rs  main.rs  mod.rs  pkg.rs  prompts.rs  robots.txt  router.rs  setup.rs  vega.db  vertex_ai.rs  vm.rs  web_session.rs
data/: config.json  project_state.json  synapse_history.json
mile_stone/: v0.0.10-bootstrap.md  v0.0.10-full.md  v0.0.10.md  베가 추가사항2.md
prompts/: 2026-02-17_save_token.md  2026-02-18_manual_snapshot.md  2026-02-18_selection_ungrouped.md
src/: config.rs  context.rs  init.rs  interactor.rs  knowledge.rs  lib.rs  logger.rs  main.rs  main.ts  setup.rs  shell.rs  token_saver.rs  vega.db
src/ai/: auth_manager.rs  generator.rs  intent.rs  mod.rs  prompts.rs  router.rs
src/auth/: google.rs
src/connection/: mod.rs  ssh.rs
src/context/: mod.rs  switcher.rs
src/doom/: engine.rs  mapper.rs  mod.rs  renderer.rs
src/executor/: ast.rs  healer.rs  mod.rs  orchestrator.rs  pipeline.rs  pkg.rs  status.rs  template.rs  virt.rs
src/remote/: mod.rs  rclone.rs
src/reporting/: analytics.rs  mod.rs  pdf.rs
src/safety/: checker.rs  mod.rs  risk.rs  sanitizer.rs  ui.rs
src/scan/: env.rs  vm.rs
src/security/: keyring.rs
src/storage/: db.rs
src/system/: archivist.rs  config.rs  context.rs  discovery.rs  docker.rs  env_scanner.rs  executor.rs  global.rs  (+7 more)
(+7 files in other folders)
