[package]
name = "vega"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
regex = "1"
lazy_static = "1.4"
chrono = "0.4"
dirs = "5.0"
crossterm = "0.29.0"
rand = "0.9.2"
md5 = "0.8.0"
tokio = { version = "1.49.0", features = ["full"] }
futures = "0.3.31"
colored = "2.1"
ssh2 = "0.9"
log = "0.4"
rusqlite = "0.32"
keyring = "3.6"
genpdf = "0.2"

